public interface Shape {
    void print();

    double area();

    double perimeter();
}