public abstract class ShapeFactory {
    public abstract Shape createShape();
}